--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <title>redirecting to jacyzon.com</title>
       <script type="text/javascript">
         window.location="https://jacyzon.com";
       </script>
